--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Custom NPC Docs
+description: Docs on how to make and use custom npcs in hollow knight!
 theme: just-the-docs
 
 url: https://just-the-docs.github.io
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  CustomNPCDocs Repo: https://github.com/Zickles/CustomNPCDocs/
