--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Custom NPC Docs
 description: Docs on how to make and use custom npcs in hollow knight!
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://zickles.github.io/CustomNPCDocs/
 
 aux_links:
   CustomNPCDocs Repo: https://github.com/Zickles/CustomNPCDocs/
