change theme to dark mode

--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ url: https://zickles.github.io/CustomNPCDocs/
 
 aux_links:
   CustomNPCDocs Repo: https://github.com/Zickles/CustomNPCDocs/
+
+color_scheme: dark
